add rating stars to products add fontawesome

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,7 @@
 /* Colors */
 $bgcolor: white;
 $black: rgb(48, 48, 48);
-$grey: rgb(92, 92, 92);
+$grey: rgb(112, 112, 112);
+$light-grey: rgb(141, 141, 141);
+$blue: rgb(65, 138, 187);
+$orange: rgb(255, 187, 0);
