add navigation bar add search bar split products page into sections add more colors

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,8 @@
 $bgcolor: white;
 $black: rgb(48, 48, 48);
 $grey: rgb(112, 112, 112);
-$light-grey: rgb(141, 141, 141);
+$light-grey: rgb(175, 175, 175);
 $blue: rgb(65, 138, 187);
 $orange: rgb(255, 187, 0);
+$purple: #6c4873;
+$dark-purple: #53325a;
