show placeholder products while loading

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $bgcolor: white;
 $black: rgb(48, 48, 48);
 $grey: rgb(112, 112, 112);
 $light-grey: rgb(175, 175, 175);
+$lighter-grey: rgb(211, 211, 211);
 $blue: rgb(65, 138, 187);
 $orange: rgb(255, 187, 0);
 $purple: #6c4873;
