add cart popup move cart data to store add variant option to button component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
     font-family: 'Open Sans', sans-serif;
     background-color: $bgcolor;
     flex-direction: column;
+    background-color: $bgcolor;
 }
 
 /* Make every div flex by default */
