--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $lighter-grey: rgb(211, 211, 211);
 $blue: rgb(65, 138, 187);
 $orange: rgb(255, 187, 0);
 $purple: #6c4873;
+$red: #b15d72;
 $green: #60cab1;
 $dark-purple: #53325a;
 
