--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $dark-grey: rgb(77, 77, 77);
 $grey: rgb(112, 112, 112);
 $light-grey: rgb(175, 175, 175);
 $lighter-grey: rgb(211, 211, 211);
+$almost-white: rgb(231, 231, 231);
 $blue: rgb(65, 138, 187);
 $orange: rgb(255, 187, 0);
 $purple: #6c4873;
