--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 
 #app {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     background-color: $bgcolor;
     flex-direction: column;
     background-color: $bgcolor;
@@ -16,4 +16,11 @@ div {
 /* Text styles */
 .strong {
     font-weight: 600;
+}
+
+.container {
+    width: 75%;
+    margin: 0 auto;
+    flex-direction: column;
+    margin-top: 12px;
 }
