feature: search add paypal button in checkout add return item page remove link to homepage fix small description in checkout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,22 @@ div {
     flex-direction: column;
     margin-top: 12px;
 }
+
+// Forms
+.input {
+    flex-direction: column;
+    margin-bottom: 20px;
+
+    .label {
+        font-size: 0.7em;
+        color: $grey;
+        margin-bottom: 7px;
+    }
+
+    .input-text {
+        height: 30px;
+        border: 1px solid rgb(204, 204, 204);
+        border-radius: 2px;
+        padding: 0 0 0 7px;
+    }
+}
